tests/kubectl/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: platform-ingress-ingress_name
  namespace: production
  labels:
    certmanager-solver: "nginx-platform-production"
  annotations:
    kubernetes.io/ingress.class: nginx-platform-production
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /check-dns {
        return 200;
      }
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;
      proxy_set_header whitelabel "$host";
spec:
  rules:
    - host: "ingress_name"
      http:
        paths:
          - path: /
            backend:
              serviceName: platform-app
              servicePort: 3000
  tls:
    - hosts:
        - "ingress_name"
      secretName: "ingress_name-tls"
